feat: modify manifest.json

--- a/web-app/public/manifest.json
+++ b/web-app/public/manifest.json
@@ -1,25 +1,26 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Shinsekaï",
+  "name": "Shinsekaï a PWA group project",
+  "description":"This pwa helps users to organize their manga lectures",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "zorro-logo.ico",
+      "sizes": "256x134",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "zorro-wanted2.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "180x260"
     },
     {
-      "src": "logo512.png",
+      "src": "zorro-cutting.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "510x8900"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#00b894",
   "background_color": "#ffffff"
 }
