--- a/web-app/.env
+++ b/web-app/.env
@@ -1,6 +1,6 @@
 REACT_APP_LOGIN_URL=https://easy-login-api.herokuapp.com/users/login
 
 # Specifics url 
-REACT_APP_GET_CHARACTERS_URL=https://api.jikan.moe/v3/manga/2/characters
+REACT_APP_GET_MANGAS_URL=https://api.jikan.moe/v3/top/manga/1
 
 
