feat: detail page and move button from home page

--- a/web-app/.env
+++ b/web-app/.env
@@ -2,5 +2,6 @@ REACT_APP_LOGIN_URL=https://easy-login-api.herokuapp.com/users/login
 
 # Specifics url 
 REACT_APP_GET_MANGAS_URL=https://api.jikan.moe/v3/top/manga/1
+REACT_APP_GET_MANGA_URL=https://api.jikan.moe/v3/search/manga?limit=1&q=
 
 
