--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "framer-motion": "^3.2.2-rc.1",
     "i18next": "^19.8.4",
     "react-dropdown-select": "^4.7.3",
-    "react-i18next": "^11.8.5"
+    "react-i18next": "^11.8.5",
+    "uuidv4": "^6.2.6"
   },
   "devDependencies": {
     "http-server": "^0.12.3"
