--- a/web-app/package.json
+++ b/web-app/package.json
@@ -36,6 +36,7 @@
     "start": "react-scripts start",
     "start-http": "http-server ./build",
     "build": "react-scripts build",
+    "build:azure":"serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
