--- a/web-app/package.json
+++ b/web-app/package.json
@@ -68,5 +68,8 @@
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.14",
     "http-server": "^0.12.3"
+  },
+  "engines": {
+    "node": "12.11.1"
   }
 }
