--- a/web-app/package.json
+++ b/web-app/package.json
@@ -33,7 +33,7 @@
     "workbox-streams": "^5.1.3"
   },
   "scripts": {
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "start-http": "http-server ./build",
     "build": "react-scripts build",
     "build:azure":"serve -s build",
