--- a/web-app/package.json
+++ b/web-app/package.json
@@ -33,14 +33,15 @@
     "workbox-streams": "^5.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "start-http": "http-server ./build",
     "build": "react-scripts build",
     "build:azure":"serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
