--- a/web-app/package.json
+++ b/web-app/package.json
@@ -41,8 +41,7 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "heroku-postbuild": "npm run build",
-    "heroku buildpacks": "set https://github.com/mars/create-react-app-buildpack"
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
